--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -17,6 +17,12 @@
                 <span class="sidenav-label">User Management</span>
               </a>
           </li> 
+          <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+            <a routerLink="/professional-management" aria-haspopup="true">
+              <span class="sidenav-icon icon icon-users"></span>
+              <span class="sidenav-label">Professional Management</span>
+            </a>
+          </li>
           <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
             <a routerLink="/content_management" aria-haspopup="true">
               <span class="sidenav-icon icon icon-users"></span>
@@ -24,6 +30,8 @@
             </a>
           </li>
 
+
+         
           
           <li class="reportsPageNav" routerLinkActive='active'>
               <a routerLink="/reports" aria-haspopup="true">
