--- a/src/app/layout/user-management/user-management.component.html
+++ b/src/app/layout/user-management/user-management.component.html
@@ -52,7 +52,7 @@
                             <!-- Name Column -->
                             <ng-container matColumnDef="name">
                               <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                              <td mat-cell *matCellDef="let element"> {{element.first_name}} {{element.last_name}}</td>
+                              <td mat-cell *matCellDef="let element"> {{element.full_name}}</td>
                             </ng-container>
                           
                            
@@ -94,10 +94,7 @@
                                     </span>
                                     Delete
                                 </button>
-                                <!-- <label class="switch">
-                                    <input type="checkbox" checked>
-                                    <span class="slider round"></span>
-                                </label> -->
+                               
                               </td>
                             </ng-container>
                           
