updates job cat

--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -23,6 +23,12 @@
               <span class="sidenav-label">Professional Management</span>
             </a>
           </li>
+          <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+            <a routerLink="/job-categorie" aria-haspopup="true">
+              <span class="sidenav-icon icon icon-users"></span>
+              <span class="sidenav-label">Job Categorie</span>
+            </a>
+          </li>
           <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
             <a routerLink="/content_management" aria-haspopup="true">
               <span class="sidenav-icon icon icon-users"></span>
