--- a/src/app/layout/user-management/user-management.component.html
+++ b/src/app/layout/user-management/user-management.component.html
@@ -76,12 +76,9 @@
                             <ng-container matColumnDef="action">
                               <th mat-header-cell *matHeaderCellDef> Action </th>
                               <td mat-cell *matCellDef="let element">
-                                <!-- <button class="btn btn-success btn-sm btn-labeled" type="button" data-toggle="modal" data-target="#addUser" (click)="selectEditUser(element)">
-                                    <span class="btn-label">
-                                    <i class="fa fa-edit icon-lg icon-fw" aria-hidden="true"></i>
-                                    </span>
-                                    Edit
-                                </button> -->
+                                <button class="btn btn-primary btn-sm" type="button" data-toggle="modal" data-target="#viewUser" (click)="selectviewdata(element)">
+                                  <i class="fa fa-eye f-16" aria-hidden="true"></i>
+                                </button>
                                 <button class="btn btn-sm btn-labeled" [ngClass]="{'btn-info': element.is_block, 'btn-warning': !element.is_block}" type="button" data-toggle="modal" data-target="#blockUser" (click)="selectBlockUser(element)">
                                     <span class="btn-label">
                                         <i class="fa fa-ban f-16" aria-hidden="true"></i>
@@ -176,5 +173,103 @@
      </div>
    </div>
  
+
+  <div id="viewUser" tabindex="-1" role="dialog" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header bg-primary">
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">×</span>
+            <span class="sr-only">Close</span>
+          </button>
+          <h4 class="modal-title">User full detail</h4>
+        </div>
+        <div class="modal-body provider-detail" *ngIf="datatoshow">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card text-center">
+                <div class="card-image">
+                  <div class="overlay"></div>
+                </div>
+                <div class="card-avatar text-left">
+                  <a class="card-thumbnail rounded" style="width: 150px;height: 160px;overflow: hidden;" href="#">
+                    <img class="img-responsive" src="{{imagetoshow}}" alt="Instagram">
+                  </a>
+                </div>
+                <div class="card-body">
+                  <h3 class="card-title text-left">Full Name</h3>
+                  <p class="text-justify">{{datatoshow.full_name}}</p>
+                </div>
+                <!-- <div class="card-body">
+                    <h3 class="card-title text-left">Restaurant owner name</h3>
+                    <p class="text-justify">{{datatoshow.restaurant_owner_name}}</p>
+                  </div> -->
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card">
+                <div class="card-body">
+                  <ul class="media-list">
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Mobile No.</h4>
+                        <small>{{datatoshow.country_code}} {{datatoshow.mobile_number}}</small>
+                      </div>
+                    </li>
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Email</h4>
+                        <small>{{datatoshow.email_id}}</small>
+                      </div>
+                    </li>
+                    <!-- <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Account holder name</h4>
+                        <small>{{datatoshow.account_holder_name}}</small>
+                      </div>
+                    </li>
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Account number </h4>
+                        <small>{{datatoshow.account_number}}</small>
+                      </div>
+                    </li>
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Bank Code </h4>
+                        <small>{{datatoshow.bank_code}}</small>
+                      </div>
+                    </li> -->
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Mobile Verified</h4>
+                        <!-- <small>{{datatoshow.is_mobile_verify}}</small> -->
+                        <small *ngIf="datatoshow.is_mobile_verify==true">Verified</small>
+                        <small *ngIf="datatoshow.is_mobile_verify==false">Not Verified</small>
+                      </div>
+                    </li>
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Language</h4>
+                        <small *ngIf="datatoshow.is_language==0">English</small>
+                        <small *ngIf="datatoshow.is_language==1">Arabic</small>
+                      </div>
+                    </li>
+                    <li class="media">
+                      <div class="media-middle media-body">
+                        <h4 class="m-y-0">Account Created on</h4>
+                        <small>{{(datatoshow.created_on ) * 1000 |date}}</small>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer"></div>
+      </div>
+    </div>
+  </div>
    
    
