--- a/src/app/layout/professional-management/professional-management.component.html
+++ b/src/app/layout/professional-management/professional-management.component.html
@@ -8,7 +8,7 @@
       <div class="layout-content-body">
         <div class="title-bar">
           <h1 class="title-bar-title">
-            <span class="d-ib">User Management</span>
+            <span class="d-ib">Professional Management</span>
           </h1>
         </div>
         <div class="row gutter-xs">
@@ -20,7 +20,7 @@
                               <button type="button" class="card-action card-reload" title="Reload"></button> -->
 
                 </div>
-                <strong>User List</strong>
+                <strong>Professional List</strong>
               </div>
               <div class="card-body">
                 <div class="row" style="margin-bottom: 10px;">
