--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -11,7 +11,7 @@
               <span class="sidenav-label">Dashboard</span>
             </a>
           </li>
-           <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+           <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
               <a routerLink="/user-management" aria-haspopup="true">
                 <span class="sidenav-icon icon icon-users"></span>
                 <span class="sidenav-label">User Management</span>
@@ -28,7 +28,7 @@
               <span class="sidenav-icon icon icon-users"></span>
               <span class="sidenav-label">Job Categorie</span>
             </a>
-          </li>
+          </li> -->
           <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
             <a routerLink="/content_management" aria-haspopup="true">
               <span class="sidenav-icon icon icon-users"></span>
