--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -2,10 +2,10 @@
     <div class="navbar navbar-default">
       <div class="navbar-header">
         <a class="navbar-brand navbar-brand-center" routerLink="/dashboard">
-          <!-- <img class="navbar-brand-logo" src="assets/img/logo-1.png" alt="Elephant"> -->
-          <p style=" font-family: myFirstFont;
+          <img class="navbar-brand-logo" src="assets/img/logo123.png" alt="Elephant">
+          <!-- <p style=" font-family: myFirstFont;
            src: url(sansation_bold.woff);
-           font-weight: bold;">Appcrowd</p>
+           font-weight: bold;">Appcrowd</p> -->
         </a>
         <button class="navbar-toggler visible-xs-block collapsed" type="button" data-toggle="collapse" data-target="#sidenav">
           <span class="sr-only">Toggle navigation</span>
