--- a/src/app/shared/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   <div class="login">
     <div class="login-body">
       <a class="login-brand" href="javascript:void(0)">
-        <img class="img-responsive" src="assets/img/logo-blk.png" alt="logo">
+        <img class="img-responsive" src="assets/img/logo123.png" alt="logo">
       </a>
       <div class="login-form">
         <form (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
