--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -11,6 +11,24 @@
               <span class="sidenav-label">Dashboard</span>
             </a>
           </li>
+          <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+            <a routerLink="/farmer_list" aria-haspopup="true">
+              <span class="sidenav-icon icon icon-male"></span>
+              <span class="sidenav-label">Farmer Management</span>
+            </a>
+          </li>
+          <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+            <a routerLink="/agronomist_list" aria-haspopup="true">
+              <span class="sidenav-icon icon icon-gift"></span>
+              <span class="sidenav-label">Agronomist Management</span>
+            </a>
+          </li>
+          <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+            <a routerLink="/supplier_list" aria-haspopup="true">
+              <span class="sidenav-icon icon icon-truck"></span>
+              <span class="sidenav-label">Supplier Management</span>
+            </a>
+          </li>
            <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
               <a routerLink="/user-management" aria-haspopup="true">
                 <span class="sidenav-icon icon icon-users"></span>
