--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="navbar navbar-default">
       <div class="navbar-header">
         <a class="navbar-brand navbar-brand-center" routerLink="/dashboard">
-          <img class="navbar-brand-logo" src="assets/img/logo123.png" alt="Elephant">
+          <img class="navbar-brand-logo" src="assets/img/logo.png" alt="Elephant">
           <!-- <p style=" font-family: myFirstFont;
            src: url(sansation_bold.woff);
            font-weight: bold;">Appcrowd</p> -->
