--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -29,6 +29,30 @@
               <span class="sidenav-label">Supplier Management</span>
             </a>
           </li>
+           <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+             <a routerLink="/education_list" aria-haspopup="true">
+               <span class="sidenav-icon icon icon-book"></span>
+               <span class="sidenav-label">Education List</span>
+             </a>
+           </li>
+            <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+              <a routerLink="/institute_list" aria-haspopup="true">
+                <span class="sidenav-icon icon icon-building"></span>
+                <span class="sidenav-label">Institute List</span>
+              </a>
+            </li>
+            <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+              <a routerLink="/idcard_list" aria-haspopup="true">
+                <span class="sidenav-icon icon icon-group"></span>
+                <span class="sidenav-label">Id card list</span>
+              </a>
+            </li>
+            <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
+              <a routerLink="/agro_tech_spec_list" aria-haspopup="true">
+                <span class="sidenav-icon icon icon-book"></span>
+                <span class="sidenav-label">Agro-tech Specification</span>
+              </a>
+            </li>
            <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
               <a routerLink="/user-management" aria-haspopup="true">
                 <span class="sidenav-icon icon icon-users"></span>
