--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="login-body">
       <a class="login-brand" href="javascript:void(0)">
         <!-- <span style="text-aligin:center;font-size: 20px;font-family: unset;font-weight: bold;">Zaoplus</span> -->
-        <img class="img-responsive" src="assets/img/logo123.png" alt="logo">
+        <img class="img-responsive" src="assets/img/logo.png" alt="logo">
       </a>
       <div class="login-form">
         <form [formGroup]="loginForm" data-toggle="validator">
