--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -63,6 +63,9 @@
                 <li class="accNav-a sidenav-item"><a routerLink="/institute_list">Institute List</a></li>
                 <li class="accNav-a sidenav-item"><a routerLink="/idcard_list">Id card list</a></li>
               <li class="accNav-a sidenav-item"><a routerLink="/agro_tech_spec_list">Agro-tech Specification</a></li>
+              <li class="accNav-a sidenav-item"><a routerLink="/admin_crop">Crop List</a></li>
+                 <li class="accNav-a sidenav-item"><a routerLink="/bank_list">Bank List</a></li>
+              
               </ul>
             </li>
            <!-- <li class="sidenav-item subadminPageNav" routerLinkActive='active'>
