--- a/src/app/common/left-sidebar/left-sidebar.component.html
+++ b/src/app/common/left-sidebar/left-sidebar.component.html
@@ -59,12 +59,14 @@
                 <span class="sidenav-label">Dictionary Settings</span>
               </a>
               <ul class="sidenav-subnav collapse" aria-expanded="true">
-                <li class="accNav-a sidenav-item"><a routerLink="/education_list">Education List</a></li>
-                <li class="accNav-a sidenav-item"><a routerLink="/institute_list">Institute List</a></li>
-                <li class="accNav-a sidenav-item"><a routerLink="/idcard_list">Id card list</a></li>
+              <li class="accNav-a sidenav-item"><a routerLink="/education_list">Education List</a></li>
+              <li class="accNav-a sidenav-item"><a routerLink="/institute_list">Institute List</a></li>
+              <li class="accNav-a sidenav-item"><a routerLink="/idcard_list">Id card list</a></li>
               <li class="accNav-a sidenav-item"><a routerLink="/agro_tech_spec_list">Agro-tech Specification</a></li>
               <li class="accNav-a sidenav-item"><a routerLink="/admin_crop">Crop List</a></li>
-                 <li class="accNav-a sidenav-item"><a routerLink="/bank_list">Bank List</a></li>
+              <li class="accNav-a sidenav-item"><a routerLink="/bank_list">Bank List</a></li>
+              <li class="accNav-a sidenav-item"><a routerLink="/product_cate_list">Product Categorie List</a></li>
+                 
               
               </ul>
             </li>
